tests/k8s/tests/deployments/guestbook/policies/guestbook-policy-redis-deprecated.json
{
  "apiVersion": "extensions/v1beta1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "guestbook-redis-deprecated"
  },
  "spec": {
    "podSelector": {
      "matchLabels": {
        "k8s-app.guestbook": "redis"
      }
    },
    "ingress": [
      {
        "from": [
          {
            "podSelector": {
              "matchLabels": {
                "k8s-app.guestbook": "web"
              }
            }
          },
          {
            "podSelector": {
              "matchLabels": {
                "k8s-app.guestbook": "redis"
              }
            }
          }
        ],
        "ports": [
          {
            "protocol": "TCP",
            "port": 6379
          }
        ]
      }
    ]
  }
}
