tests/k8s/tests/deployments/guestbook/policies/guestbook-policy-web.yaml
apiVersion: "cilium.io/v1"
kind: CiliumNetworkPolicy
metadata:
  name: "guestbook-web"
spec:
  endpointSelector:
    matchLabels:
      k8s-app.guestbook: web
  ingress:
  - fromEndpoints:
    - matchLabels:
        "reserved.world": ""
    toPorts:
    - ports:
      - port: "3000"
        protocol: TCP
